--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article" id="msg-box8-q" style="background-color: rgb(144, 168, 120); padding-top: 80px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-section article" id="msg-box8-q" style="background-color: rgb(144, 168, 120); padding-top: 80px; padding-bottom: 120px;">
 
     
     <div class="container">
